--- a/app/src/main/res/layout/view_show_address.xml
+++ b/app/src/main/res/layout/view_show_address.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llAdress"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/setting_call_locate_blue"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/launcher_ic" />
+        android:src="@android:drawable/ic_menu_call" />
 
     <TextView
         android:id="@+id/tvAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:textColor="@color/ta"
+        android:textColor="@color/tb"
         android:textSize="22sp"
         tools:text="广东广州电信" />
 </LinearLayout>
