--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -34,4 +34,11 @@
         silion:descOnText="半透明"
         silion:icon="1"
         silion:titleText="归属地提示框风格" />
+
+    <com.silion.mobilesafe.view.SettingItemView
+        android:id="@+id/addressLocateSettingItemView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        silion:icon="1"
+        silion:titleText="归属地提示框位置" />
 </LinearLayout>
