--- a/app/src/main/res/layout/activity_drag_address_view.xml
+++ b/app/src/main/res/layout/activity_drag_address_view.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5000"
     android:orientation="vertical">
 
     <TextView
@@ -13,7 +14,7 @@
         android:text="按住提示框拖动到任意问题\n按手机返回键立即生效"
         android:textColor="@color/tb"
         android:textSize="20sp"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/ivLocate"
