Black number list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="ta">#000000</color>
     <color name="tb">#ffffff</color>
     <color name="tc">#aa000000</color>
+    <color name="td">#555</color>
 </resources>
