--- a/app/src/main/res/layout/activity_callsafe.xml
+++ b/app/src/main/res/layout/activity_callsafe.xml
@@ -13,56 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/listView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="btPrev"
-                    android:text="上一页"/>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="btNext"
-                    android:text="下一页"/>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="btJump"
-                    android:text="跳到"/>
-
-                <EditText
-                    android:id="@+id/etPage"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:textSize="20sp"/>
-
-                <TextView
-                    android:id="@+id/tvPage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    tools:text="0/10"/>
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height="match_parent"/>
 
         <ProgressBar
             android:id="@+id/pbLoad"
