--- a/app/src/main/res/layout/activity_callsafe.xml
+++ b/app/src/main/res/layout/activity_callsafe.xml
@@ -5,9 +5,23 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView
-        style="@style/TitleStyle"
-        android:text="黑名单管理"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            style="@style/TitleStyle"
+            android:text="黑名单管理"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:onClick="addBlack"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:text="添加"/>
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
