--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:silion="http://schemas.android.com/apk/com.silion.mobilesafe"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              xmlns:silion="http://schemas.android.com/apk/com.silion.mobilesafe"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <TextView
         style="@style/TitleStyle"
-        android:text="设置" />
+        android:text="设置"/>
 
     <com.silion.mobilesafe.view.SettingItemView
         android:id="@+id/updateSettingItemView"
@@ -16,7 +16,7 @@
         silion:descOffText="自动更新已关闭"
         silion:descOnText="自动更新已开启"
         silion:icon="0"
-        silion:titleText="自动更新" />
+        silion:titleText="自动更新"/>
 
     <com.silion.mobilesafe.view.SettingItemView
         android:id="@+id/addressSettingItemView"
@@ -25,7 +25,7 @@
         silion:descOffText="电话归属地显示已关闭"
         silion:descOnText="电话归属地显示已开启"
         silion:icon="0"
-        silion:titleText="电话归属地显示" />
+        silion:titleText="电话归属地显示"/>
 
     <com.silion.mobilesafe.view.SettingItemView
         android:id="@+id/addressStyleSettingItemView"
@@ -33,12 +33,21 @@
         android:layout_height="wrap_content"
         silion:descOnText="半透明"
         silion:icon="1"
-        silion:titleText="归属地提示框风格" />
+        silion:titleText="归属地提示框风格"/>
 
     <com.silion.mobilesafe.view.SettingItemView
         android:id="@+id/addressLocateSettingItemView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         silion:icon="1"
-        silion:titleText="归属地提示框位置" />
+        silion:titleText="归属地提示框位置"/>
+
+    <com.silion.mobilesafe.view.SettingItemView
+        android:id="@+id/blackSettingItemView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        silion:descOffText="拦截黑名单已关闭"
+        silion:descOnText="拦截黑名单已开启"
+        silion:icon="0"
+        silion:titleText="拦截黑名单"/>
 </LinearLayout>
