--- a/app/src/main/res/anim/cycle_7.xml
+++ b/app/src/main/res/anim/cycle_7.xml
@@ -14,4 +14,5 @@
      limitations under the License.
 -->
 
-<cycleInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:cycles="7" />
+<cycleInterpolator xmlns:android="http://schemas.android.com/apk/res/android"
+                   android:cycles="7"/>
