--- a/app/src/main/res/layout/listitem_appmanager.xml
+++ b/app/src/main/res/layout/listitem_appmanager.xml
@@ -25,6 +25,7 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:textColor="@color/ta"
             android:textSize="20sp"
             tools:text="手机卫士"/>
