--- a/app/src/main/res/layout/activity_taskmanager.xml
+++ b/app/src/main/res/layout/activity_taskmanager.xml
@@ -41,7 +41,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <ListView
             android:id="@+id/listView"
@@ -52,6 +53,53 @@
             android:id="@+id/pbLoading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:visibility="gone"/>
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btSelectAll"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/global_btn_light_green_selector"
+            android:onClick="selectAll"
+            android:text="全选"
+            android:textSize="19sp"/>
+
+        <Button
+            android:id="@+id/btInvertSelect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/global_btn_light_green_selector"
+            android:onClick="invertSelect"
+            android:text="反选"
+            android:textSize="19sp"/>
+
+        <Button
+            android:id="@+id/btClear"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/global_btn_light_green_selector"
+            android:onClick="clear"
+            android:text="清理"
+            android:textSize="19sp"/>
+
+        <Button
+            android:id="@+id/btSetting"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/global_btn_light_green_selector"
+            android:onClick="setting"
+            android:text="设置"
+            android:textSize="19sp"/>
+    </LinearLayout>
 </LinearLayout>
