--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,53 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:silion="http://schemas.android.com/apk/com.silion.mobilesafe"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        style="@style/TitleStyle"
-        android:text="设置"/>
+    <LinearLayout xmlns:silion="http://schemas.android.com/apk/com.silion.mobilesafe"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical">
 
-    <com.silion.mobilesafe.view.SettingItemView
-        android:id="@+id/updateSettingItemView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        silion:descOffText="自动更新已关闭"
-        silion:descOnText="自动更新已开启"
-        silion:icon="0"
-        silion:titleText="自动更新"/>
+        <TextView
+            style="@style/TitleStyle"
+            android:text="设置"/>
 
-    <com.silion.mobilesafe.view.SettingItemView
-        android:id="@+id/addressSettingItemView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        silion:descOffText="电话归属地显示已关闭"
-        silion:descOnText="电话归属地显示已开启"
-        silion:icon="0"
-        silion:titleText="电话归属地显示"/>
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/updateSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:descOffText="自动更新已关闭"
+            silion:descOnText="自动更新已开启"
+            silion:icon="0"
+            silion:titleText="自动更新"/>
 
-    <com.silion.mobilesafe.view.SettingItemView
-        android:id="@+id/addressStyleSettingItemView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        silion:descOnText="半透明"
-        silion:icon="1"
-        silion:titleText="归属地提示框风格"/>
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/addressSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:descOffText="电话归属地显示已关闭"
+            silion:descOnText="电话归属地显示已开启"
+            silion:icon="0"
+            silion:titleText="电话归属地显示"/>
 
-    <com.silion.mobilesafe.view.SettingItemView
-        android:id="@+id/addressLocateSettingItemView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        silion:icon="1"
-        silion:titleText="归属地提示框位置"/>
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/addressStyleSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:descOnText="半透明"
+            silion:icon="1"
+            silion:titleText="归属地提示框风格"/>
 
-    <com.silion.mobilesafe.view.SettingItemView
-        android:id="@+id/blackSettingItemView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        silion:descOffText="拦截黑名单已关闭"
-        silion:descOnText="拦截黑名单已开启"
-        silion:icon="0"
-        silion:titleText="拦截黑名单"/>
-</LinearLayout>
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/addressLocateSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:icon="1"
+            silion:titleText="归属地提示框位置"/>
+
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/blackSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:descOffText="拦截黑名单已关闭"
+            silion:descOnText="拦截黑名单已开启"
+            silion:icon="0"
+            silion:titleText="拦截黑名单"/>
+
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/showSysSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:descOffText="进程管理中不显示系统进程"
+            silion:descOnText="在进程管理中显示系统进程"
+            silion:icon="0"
+            silion:titleText="显示系统进程"/>
+
+        <com.silion.mobilesafe.view.SettingItemView
+            android:id="@+id/clearOnTimeSettingItemView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            silion:icon="1"
+            silion:titleText="定时清理进程"/>
+    </LinearLayout>
+</ScrollView>
