--- a/app/src/main/res/layout/listitem_taskmanager.xml
+++ b/app/src/main/res/layout/listitem_taskmanager.xml
@@ -45,6 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:button="@drawable/taskmanager_cb_check_selector"
         android:clickable="false"
         android:focusable="false"/>
 </LinearLayout>
