--- a/app/src/main/res/layout/activity_antivirus.xml
+++ b/app/src/main/res/layout/activity_antivirus.xml
@@ -47,7 +47,7 @@
 
             <ProgressBar
                 android:id="@+id/pbScanning"
-                style="@android:style/Widget.ProgressBar.Horizontal"
+                style="@style/MyProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"/>
