--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -21,6 +21,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        style="@style/MyProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/versionTextView"
